--- a/src/function/GenBasic.css
+++ b/src/function/GenBasic.css
@@ -1,14 +1,14 @@
 form{
-    display: flex;
-    justify-content:space-between;
+    display: block;
+    justify-content:center;
     align-items: center;
     text-align: center;
     flex-direction: row;
     box-sizing: border-box;
     box-shadow: 0px 0.5px 0px 0.5px rgba(0,0.85, 0, 0.85);
-    padding:0.5rem;
     margin: 1rem 0;
-    border-radius: 12px;
+    padding:1.5rem;
+    border-radius: 25px;
     background-color: #808000;
 }
 .form{
@@ -18,9 +18,11 @@ form{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    text-align: center;
+    max-width: 95%;
     box-shadow: 0 2px 8px rgba(0,0,0.25,0.8);
-    padding: 0.30rem;
+    padding: 1.5rem;
     margin: 1rem 0 ;
-    border-radius: 12px;
+    border-radius: 10px;
     background-color: #000080;
 }
